--- a/app/src/at-uyennguyen/res/layout/fragment_edit_profile.xml
+++ b/app/src/at-uyennguyen/res/layout/fragment_edit_profile.xml
@@ -1,224 +1,221 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+    android:layout_height="match_parent">
+
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context=".Editprofile"
-        android:background="#FFFFFF">
+        android:background="@android:color/white"
+        android:orientation="vertical"
+        tools:context=".Editprofile">
 
         <ImageView
-            android:id="@+id/back"
+            android:id="@+id/imgBack"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginTop="57dp"
             android:layout_marginLeft="25dp"
-            android:src="@drawable/back" />
+            android:layout_marginTop="57dp"
+            android:src="@drawable/ic_back"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textBack"
-            android:layout_width="82dp"
-            android:layout_height="16dp"
-            app:layout_constraintTop_toTopOf="@id/back"
-            app:layout_constraintStart_toEndOf="@id/back"
+            android:id="@+id/tvBack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
             android:text="@string/back_to_profile"
+            android:textColor="@color/grey_tv"
             android:textSize="12sp"
-            android:textColor="#767676" />
+            app:layout_constraintStart_toEndOf="@id/imgBack"
+            app:layout_constraintTop_toTopOf="@id/imgBack" />
 
         <TextView
-            android:id="@+id/textEdit"
-            android:layout_width="120dp"
-            android:layout_height="32dp"
-            app:layout_constraintTop_toBottomOf="@id/back"
-            app:layout_constraintLeft_toLeftOf="@id/back"
+            android:id="@+id/tvEdit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:text="@string/edit_profile"
-            android:textSize="24sp"
             android:fontFamily="Nunito-Bold"
-            android:textColor="#030F09" />
-        <!--        <ImageView-->
-        <!--            android:id="@+id/youravatar"-->
-        <!--            android:layout_width="100dp"-->
-        <!--            android:layout_height="100dp"-->
-        <!--            app:layout_constraintTop_toBottomOf="@id/textEdit"-->
-        <!--            app:layout_constraintLeft_toLeftOf="parent"-->
-        <!--            app:layout_constraintRight_toRightOf="parent"-->
-        <!--            android:layout_marginTop="20dp"-->
-        <!--            android:src="@drawable/avatar"/>-->
+            android:text="@string/edit_profile"
+            android:textColor="@android:color/black"
+            android:textSize="24sp"
+            app:layout_constraintLeft_toLeftOf="@id/imgBack"
+            app:layout_constraintTop_toBottomOf="@id/imgBack" />
+
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/youravatar"
+            android:id="@+id/imgAvatar"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            app:layout_constraintTop_toBottomOf="@id/textEdit"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/img_avatarman"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="20dp"
-            android:src="@drawable/avatarman" />
+            app:layout_constraintTop_toBottomOf="@id/tvEdit" />
 
         <TextView
-            android:id="@+id/editAvatar"
-            android:layout_width="136dp"
-            android:layout_height="21dp"
-            app:layout_constraintTop_toBottomOf="@+id/youravatar"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+            android:id="@+id/tvAvatar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="@string/edit_profile_picture"
-            android:textSize="16sp"
             android:fontFamily="Nunito-Bold"
-            android:textColor="#30BE76" />
+            android:text="@string/edit_profile_picture"
+            android:textColor="@color/green"
+            android:textSize="16sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imgAvatar" />
 
         <TextView
-            android:id="@+id/textFullName"
-            android:layout_width="65dp"
-            android:layout_height="19dp"
-            app:layout_constraintTop_toBottomOf="@id/editAvatar"
-            app:layout_constraintLeft_toLeftOf="@id/textEdit"
+            android:id="@+id/tvFullName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:fontFamily="Nunito-Regular"
             android:text="@string/full_name"
-            android:textColor="#A8A8A8"
+            android:textColor="@color/grey_tv"
             android:textSize="14sp"
-            android:fontFamily="Nunito-Regular" />
+            app:layout_constraintLeft_toLeftOf="@id/tvEdit"
+            app:layout_constraintTop_toBottomOf="@id/tvAvatar" />
 
         <EditText
-            android:id="@+id/editFullName"
-            android:layout_width="0dp"
+            android:id="@+id/edtFullName"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/textFullName"
-            app:layout_constraintLeft_toLeftOf="@id/textFullName"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="25dp"
+            android:layout_marginStart="25dp"
             android:layout_marginTop="25dp"
-            android:textSize="16sp"
-            android:textColor="#030F09"
+            android:layout_marginEnd="25dp"
             android:fontFamily="Nunito-Regular"
             android:hint="@string/your_full_name_in_profile"
-            android:textColorHint="#ACA8A8"
             android:inputType="text"
+            android:textColor="@android:color/black"
+            android:textColorHint="@color/grey"
+            android:textSize="16sp"
+            app:layout_constraintLeft_toLeftOf="@id/tvFullName"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvFullName"
             tools:ignore="autofill" />
 
         <TextView
-            android:id="@+id/textBio"
-            android:layout_width="22dp"
-            android:layout_height="19dp"
-            app:layout_constraintTop_toBottomOf="@+id/editFullName"
-            app:layout_constraintLeft_toLeftOf="@id/editFullName"
+            android:id="@+id/tvBio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
+            android:fontFamily="Nunito-Regular"
             android:text="@string/bio"
-            android:textColor="#A8A8A8"
+            android:textColor="@color/grey_tv"
             android:textSize="14sp"
-            android:fontFamily="Nunito-Regular" />
+            app:layout_constraintLeft_toLeftOf="@id/edtFullName"
+            app:layout_constraintTop_toBottomOf="@+id/edtFullName" />
 
         <EditText
-            android:id="@+id/editBio"
-            android:layout_width="0dp"
+            android:id="@+id/edtBio"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/textBio"
-            app:layout_constraintLeft_toLeftOf="@id/textBio"
-            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginStart="25dp"
             android:layout_marginTop="25dp"
-            android:layout_marginRight="25dp"
-            android:textSize="16sp"
-            android:textColor="#030F09"
+            android:layout_marginEnd="25dp"
             android:fontFamily="Nunito-Regular"
             android:hint="@string/your_bio_in_profile"
-            android:textColorHint="#ACA8A8"
             android:inputType="text"
+            android:textColor="@android:color/black"
+            android:textColorHint="@color/grey"
+            android:textSize="16sp"
+            app:layout_constraintLeft_toLeftOf="@id/tvBio"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvBio"
             tools:ignore="autofill" />
 
         <TextView
-            android:id="@+id/textPrivate"
-            android:layout_width="153dp"
-            android:layout_height="22dp"
-            app:layout_constraintTop_toBottomOf="@+id/editBio"
-            app:layout_constraintLeft_toLeftOf="@id/editBio"
+            android:id="@+id/tvPrivate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
+            android:fontFamily="Nunito-Bold"
             android:text="@string/private_information"
-            android:textColor="#030F09"
+            android:textColor="@android:color/black"
             android:textSize="16sp"
-            android:fontFamily="Nunito-Bold" />
+            app:layout_constraintLeft_toLeftOf="@id/edtBio"
+            app:layout_constraintTop_toBottomOf="@+id/edtBio" />
 
         <TextView
-            android:id="@+id/textEmail2"
-            android:layout_width="35dp"
-            android:layout_height="19dp"
-            app:layout_constraintTop_toBottomOf="@id/textPrivate"
-            app:layout_constraintLeft_toLeftOf="@id/textPrivate"
+            android:id="@+id/tvEmail2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:fontFamily="Nunito-Regular"
             android:text="@string/email"
-            android:textColor="#A8A8A8"
+            android:textColor="@color/grey_tv"
             android:textSize="14sp"
-            android:fontFamily="Nunito-Regular" />
+            app:layout_constraintLeft_toLeftOf="@id/tvPrivate"
+            app:layout_constraintTop_toBottomOf="@id/tvPrivate" />
 
         <EditText
-            android:id="@+id/editViewEmail2"
-            android:layout_width="0dp"
+            android:id="@+id/edtViewEmail2"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/textEmail2"
-            app:layout_constraintLeft_toLeftOf="@id/textEmail2"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="25dp"
+            android:layout_marginStart="25dp"
             android:layout_marginTop="25dp"
-            android:textSize="16sp"
-            android:textColor="#030F09"
+            android:layout_marginEnd="25dp"
             android:fontFamily="Nunito-Regular"
             android:hint="@string/your_email_in_profile"
-            android:textColorHint="#ACA8A8"
             android:inputType="textEmailAddress"
+            android:textColor="@android:color/black"
+            android:textColorHint="@color/grey"
+            android:textSize="16sp"
+            app:layout_constraintLeft_toLeftOf="@id/tvEmail2"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvEmail2"
             tools:ignore="autofill" />
 
         <TextView
-            android:id="@+id/textPhone"
-            android:layout_width="42dp"
-            android:layout_height="19dp"
-            app:layout_constraintTop_toBottomOf="@id/editViewEmail2"
-            app:layout_constraintLeft_toLeftOf="@id/editViewEmail2"
+            android:id="@+id/tvPhone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
+            android:fontFamily="Nunito-Regular"
             android:text="@string/phone"
-            android:textColor="#A8A8A8"
+            android:textColor="@color/grey_tv"
             android:textSize="14sp"
-            android:fontFamily="Nunito-Regular" />
+            app:layout_constraintLeft_toLeftOf="@id/edtViewEmail2"
+            app:layout_constraintTop_toBottomOf="@id/edtViewEmail2" />
 
         <EditText
-            android:id="@+id/editPhone"
-            android:layout_width="0dp"
+            android:id="@+id/edtPhone"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/textPhone"
-            app:layout_constraintLeft_toLeftOf="@id/textPhone"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="25dp"
+            android:layout_marginStart="25dp"
             android:layout_marginTop="25dp"
-            android:textSize="16sp"
-            android:textColor="#030F09"
+            android:layout_marginEnd="25dp"
             android:fontFamily="Nunito-Regular"
             android:hint="@string/your_phone_in_profile"
-            android:textColorHint="#ACA8A8"
             android:inputType="phone"
+            android:textColor="@android:color/black"
+            android:textColorHint="@color/grey"
+            android:textSize="16sp"
+            app:layout_constraintLeft_toLeftOf="@id/tvPhone"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvPhone"
             tools:ignore="autofill" />
 
         <Button
             android:id="@+id/btnProfile"
-            android:layout_width="319.41dp"
+            android:layout_width="match_parent"
             android:layout_height="50dp"
-            app:layout_constraintTop_toBottomOf="@id/editPhone"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginBottom="50dp"
+            android:background="@drawable/button"
+            android:gravity="center"
+            android:text="@string/save_profile"
+            android:textColor="@android:color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="32dp"
-            android:background="@drawable/button"
-            android:text="@string/save_profile"
-            android:textColor="#FFFFFF"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="50dp"
-            android:gravity="center" />
-
+            app:layout_constraintTop_toBottomOf="@id/edtPhone" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
