--- a/app/src/at-uyennguyen/res/drawable/button.xml
+++ b/app/src/at-uyennguyen/res/drawable/button.xml
@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#30BE76"/>
-    <size
-        android:width="325dp"
-        android:height="50dp"
-        />
-    <corners
-        android:radius="8dp"
-        />
+    <solid android:color="#30BE76" />
+    <corners android:radius="8dp" />
 </shape>
