--- a/app/src/at-uyennguyen/res/layout/fragment_user_profile.xml
+++ b/app/src/at-uyennguyen/res/layout/fragment_user_profile.xml
@@ -6,114 +6,116 @@
     android:background="#FFFFFF">
 
     <TextView
-        android:id="@+id/myKitchen"
-        android:layout_width="120dp"
-        android:layout_height="32dp"
+        android:id="@+id/tvMyKitchen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="25dp"
         android:layout_marginTop="49dp"
         android:fontFamily="Nunito-Bold"
         android:text="@string/my_kitchen"
-        android:textColor="#030F09"
+        android:textColor="@android:color/black"
         android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/icon"
+        android:id="@+id/imgIcon"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:src="@drawable/icon"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="55dp"
-        android:layout_marginRight="80dp" />
+        android:layout_marginRight="80dp"
+        android:src="@drawable/ic_setting"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/setting"
-        android:layout_width="50dp"
-        android:layout_height="19dp"
-        app:layout_constraintTop_toTopOf="@id/icon"
-        app:layout_constraintStart_toEndOf="@id/icon"
+        android:id="@+id/tvSetting"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="Nunito-Regular"
         android:text="@string/settings"
-        android:textColor="#030F09"
+        android:textColor="@android:color/black"
         android:textSize="14sp"
-        android:fontFamily="Nunito-Regular" />
+        app:layout_constraintStart_toEndOf="@id/imgIcon"
+        app:layout_constraintTop_toTopOf="@id/imgIcon" />
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/avatar"
+        android:id="@+id/imgAvatar"
         android:layout_width="82dp"
         android:layout_height="82dp"
-        app:layout_constraintLeft_toLeftOf="@id/myKitchen"
-        app:layout_constraintTop_toBottomOf="@id/myKitchen"
         android:layout_marginTop="30dp"
-        android:src="@drawable/avatarman" />
+        android:src="@drawable/img_avatarman"
+        app:layout_constraintLeft_toLeftOf="@id/tvMyKitchen"
+        app:layout_constraintTop_toBottomOf="@id/tvMyKitchen" />
 
     <TextView
-        android:id="@+id/name"
-        android:layout_width="80dp"
-        android:layout_height="21dp"
-        android:text="@string/nick_evans"
-        android:textColor="#030F09"
-        android:textSize="16sp"
-        android:fontFamily="Nunito-Bold"
-        app:layout_constraintStart_toEndOf="@id/avatar"
-        app:layout_constraintTop_toTopOf="@+id/avatar"
+        android:id="@+id/tvName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
         android:layout_marginTop="5dp"
-        android:layout_marginLeft="15dp" />
+        android:fontFamily="Nunito-Bold"
+        android:text="@string/nick_evans"
+        android:textColor="@android:color/black"
+        android:textSize="16sp"
+        app:layout_constraintStart_toEndOf="@id/imgAvatar"
+        app:layout_constraintTop_toTopOf="@+id/imgAvatar" />
 
     <TextView
-        android:id="@+id/address"
-        android:layout_width="95dp"
-        android:layout_height="19dp"
+        android:id="@+id/tvAddress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="Nunito-Regular"
         android:text="@string/potato_master"
-        android:fontFamily="Nunito-Regular"
-        android:textColor="#606060"
+        android:textColor="@color/grey_tv"
         android:textSize="14sp"
-        app:layout_constraintTop_toBottomOf="@id/name"
-        app:layout_constraintLeft_toLeftOf="@+id/name" />
+        app:layout_constraintLeft_toLeftOf="@+id/tvName"
+        app:layout_constraintTop_toBottomOf="@id/tvName" />
 
     <TextView
-        android:id="@+id/follow"
-        android:layout_width="90dp"
-        android:layout_height="19dp"
+        android:id="@+id/tvFollow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:fontFamily="Nunito-Regular"
         android:text="@string/_584_followers"
+        android:textColor="@color/grey_tv"
         android:textSize="14sp"
-        android:textColor="#606060"
-        android:fontFamily="Nunito-Regular"
-        app:layout_constraintLeft_toLeftOf="@+id/address"
-        app:layout_constraintTop_toBottomOf="@id/address"
-        android:layout_marginTop="10dp" />
+        app:layout_constraintLeft_toLeftOf="@+id/tvAddress"
+        app:layout_constraintTop_toBottomOf="@id/tvAddress" />
 
     <TextView
-        android:layout_width="60dp"
-        android:layout_height="19dp"
-        android:text="@string/_23k_likes"
-        android:textSize="14sp"
-        android:textColor="#606060"
+        android:id="@+id/tvNumberLike"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
         android:fontFamily="Nunito-Regular"
-        app:layout_constraintStart_toEndOf="@+id/follow"
-        app:layout_constraintTop_toTopOf="@+id/follow"
-        android:layout_marginLeft="30dp" />
+        android:text="@string/_23k_likes"
+        android:textColor="@color/grey_tv"
+        android:textSize="14sp"
+        app:layout_constraintStart_toEndOf="@+id/tvFollow"
+        app:layout_constraintTop_toTopOf="@+id/tvFollow" />
 
     <ImageView
-        android:id="@+id/penciledit"
+        android:id="@+id/imgPencil"
         android:layout_width="16dp"
         android:layout_height="16dp"
-        android:src="@drawable/edit"
-        app:layout_constraintTop_toTopOf="@+id/avatar"
         android:layout_marginTop="5dp"
+        android:layout_marginRight="30dp"
+        android:src="@drawable/ic_pencil"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="30dp" />
+        app:layout_constraintTop_toTopOf="@+id/imgAvatar" />
 
     <View
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="1dp"
-        app:layout_constraintTop_toBottomOf="@id/avatar"
-        app:layout_constraintLeft_toLeftOf="@id/avatar"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="25dp"
+        android:layout_marginStart="25dp"
         android:layout_marginTop="40dp"
-        android:background="@android:color/black" />
+        android:layout_marginRight="25dp"
+        android:background="@android:color/black"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imgAvatar" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
