--- a/app/src/at-uyennguyen/res/values/colors.xml
+++ b/app/src/at-uyennguyen/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="green">#30BE76</color>
+    <color name="grey">#A8A8A8</color>
+    <color name="grey_tv">#606060</color>
 </resources>
