--- a/app/src/at-cuongle/res/layout/fragment_step.xml
+++ b/app/src/at-cuongle/res/layout/fragment_step.xml
@@ -1,7 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/rlHome"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="asiantech.internship.summer.viewPager_tabLayout.HomeFragment">
@@ -11,6 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:text="aaa"
         android:textSize="40dp"
         android:textStyle="bold" />
 
@@ -23,11 +23,4 @@
         android:textSize="24dp"
         android:textStyle="bold" />
 
-    <me.relex.circleindicator.CircleIndicator
-        app:ci_drawable_unselected="@color/colorPrimary"
-        app:ci_drawable="@color/colorAccent"
-        android:id="@+id/indicator"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_alignParentBottom="true" />
 </RelativeLayout>
