--- a/app/src/at-cuongle/res/layout/activity_tab_layout.xml
+++ b/app/src/at-cuongle/res/layout/activity_tab_layout.xml
@@ -1,18 +1,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="asiantech.internship.summer.viewPager_tabLayout.TabLayoutFragment">
+    android:layout_height="match_parent">
 
-    <TableLayout
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/tabLayout" />
+
+    <com.google.android.material.tabs.TabLayout
+        app:tabSelectedTextColor="@color/colorAccent"
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="70dp" />
-
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/viewPager2"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/tabLayout"
-        android:layout_marginTop="70dp" />
 </RelativeLayout>
