--- a/app/src/at-cuongle/res/layout/fragment_step.xml
+++ b/app/src/at-cuongle/res/layout/fragment_step.xml
@@ -1,26 +1,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rlHome"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="asiantech.internship.summer.viewPager_tabLayout.HomeFragment">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="aaa"
         android:textSize="40dp"
         android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/tvAction"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:textSize="24dp"
-        android:textStyle="bold" />
-
 </RelativeLayout>
