--- a/app/src/at-cuongle/res/layout/fragment_information.xml
+++ b/app/src/at-cuongle/res/layout/fragment_information.xml
@@ -1,8 +1,11 @@
-<ImageView android:id="@+id/imgTitle"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="asiantech.internship.summer.viewPager_tabLayout.InformationFragment">
 
-</ImageView>
+    <ImageView
+        android:id="@+id/imgTitle"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+</RelativeLayout>
