--- a/app/src/at-cuongle/res/layout/activity_tab_layout.xml
+++ b/app/src/at-cuongle/res/layout/activity_tab_layout.xml
@@ -10,8 +10,8 @@
         android:layout_below="@+id/tabLayout" />
 
     <com.google.android.material.tabs.TabLayout
-        app:tabSelectedTextColor="@color/colorAccent"
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
-        android:layout_height="70dp" />
+        android:layout_height="70dp"
+        app:tabSelectedTextColor="@color/colorAccent" />
 </RelativeLayout>
