--- a/app/src/at-cuongle/res/layout/fragment_home.xml
+++ b/app/src/at-cuongle/res/layout/fragment_home.xml
@@ -3,11 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="asiantech.internship.summer.viewPager_tabLayout.HomeFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ImageView
+        android:id="@+id/imgTitle"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
+        android:layout_height="match_parent"/>
 </FrameLayout>
