--- a/app/src/at-cuongle/res/layout/activity_home.xml
+++ b/app/src/at-cuongle/res/layout/activity_home.xml
@@ -29,6 +29,6 @@
         android:layout_marginBottom="16dp"
         android:textStyle="bold"
         android:textColor="@color/design_default_color_on_secondary"
-        android:textSize="20sp" />
+        android:textSize="@dimen/textsize_20dp" />
 
 </RelativeLayout>
