--- a/app/src/at-cuongle/res/layout/fragment_step.xml
+++ b/app/src/at-cuongle/res/layout/fragment_step.xml
@@ -8,6 +8,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:textSize="40dp"
+        android:textSize="@dimen/textsize_40dp"
         android:textStyle="bold" />
 </RelativeLayout>
