--- a/app/src/at-cuongle/res/values/dimens.xml
+++ b/app/src/at-cuongle/res/values/dimens.xml
@@ -20,5 +20,7 @@
     <dimen name="tablayout_height_80dp">80dp</dimen>
     <dimen name="imgAvatar_width_100dp">100dp</dimen>
     <dimen name="imgAvatar_height_100dp">100dp</dimen>
+    <dimen name="textsize_20dp">20dp</dimen>
+    <dimen name="textsize_40dp">40dp</dimen>
 
 </resources>
