--- a/app/src/at-uyennguyen/res/layout/activity_viewpager.xml
+++ b/app/src/at-uyennguyen/res/layout/activity_viewpager.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/contrainLayout"
+    android:id="@+id/conTrainLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -14,11 +14,10 @@
 
     <me.relex.circleindicator.CircleIndicator
         android:id="@+id/indicator"
-        android:layout_width="60dp"
+        android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:layout_marginStart="20dp"
         android:layout_marginBottom="20dp"
-        android:outlineAmbientShadowColor="@android:color/black"
         app:ci_height="10dp"
         app:ci_width="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
