--- a/app/src/at-uyennguyen/res/layout/fragment_login.xml
+++ b/app/src/at-uyennguyen/res/layout/fragment_login.xml
@@ -168,7 +168,7 @@
             android:layout_marginTop="12dp"
             android:layout_marginBottom="50dp"
             android:fontFamily="Nunito-Bold"
-            android:text="create_account_here"
+            android:text="@string/create_account_here"
             android:textColor="@color/green"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
