--- a/app/src/at-uyennguyen/res/layout/row_item.xml
+++ b/app/src/at-uyennguyen/res/layout/row_item.xml
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
-        android:textColor="@color/black"
+        android:textColor="@android:color/black"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/imgIcon"
