--- a/app/src/at-uyennguyen/res/layout/activity_drawerlayout.xml
+++ b/app/src/at-uyennguyen/res/layout/activity_drawerlayout.xml
@@ -10,7 +10,7 @@
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#FF8952">
+        android:background="@color/orange">
 
         <TextView
             android:layout_width="wrap_content"
