--- a/app/src/at-uyennguyen/res/layout/item_header_drawer.xml
+++ b/app/src/at-uyennguyen/res/layout/item_header_drawer.xml
@@ -28,6 +28,6 @@
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@id/imgAvatar"
         app:layout_constraintTop_toBottomOf="@id/imgAvatar"
-        tools:text="uyen@gmail.com" />
+        android:text="@string/email_header"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
