--- a/app/src/at-nguyenha/res/layout/item_drawer_header.xml
+++ b/app/src/at-nguyenha/res/layout/item_drawer_header.xml
@@ -26,6 +26,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@id/imgAvatar"
         app:layout_constraintTop_toBottomOf="@id/imgAvatar"
-        tools:text="nguyen.ha@asiantech.vn" />
+        android:text="@string/textview_text_email_header" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
