--- a/app/src/at-nguyenha/res/values/colors.xml
+++ b/app/src/at-nguyenha/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="textview_color_account">#30BE76</color>
+    <color name="itemview_color_background">#d4d4d4</color>
 </resources>
