--- a/app/src/at-nguyenha/res/values/colors.xml
+++ b/app/src/at-nguyenha/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="textview_color_account">#30BE76</color>
     <color name="itemview_color_background">#d4d4d4</color>
+    <color name="color_background">#ededed</color>
 </resources>
