--- a/app/src/at-daiho/res/values/colors.xml
+++ b/app/src/at-daiho/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="colorBlack">#000</color>
+    <color name="colorGray">#000</color>
+    <color name="colorDarkGray">#6E6E6E</color>
+    <color name="colorLightGray">#F8F8F8</color>
+    <color name="colorExtraLightGray">#F2F2F2</color>
 </resources>
