--- a/app/src/at-hauha/res/layout/song_item.xml
+++ b/app/src/at-hauha/res/layout/song_item.xml
@@ -19,6 +19,7 @@
             android:id="@+id/imgSong"
             android:layout_width="60dp"
             android:layout_height="60dp"
+            android:elevation="10dp"
             android:layout_gravity="left"
             android:src="@drawable/ic_avatar" />
 
