--- a/app/src/at-hauha/res/layout/fragment_music.xml
+++ b/app/src/at-hauha/res/layout/fragment_music.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="20dp"
         android:drawableLeft="@drawable/ic_keyboard_arrow_left_pink_400_24dp"
         android:gravity="center"
-        android:text="Playlist"
+        android:text="@string/play_list"
         android:textColor="@color/colorAccent"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,6 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="400dp"
         android:layout_marginTop="20dp"
+        android:elevation="10dp"
         android:src="@drawable/default_song"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,7 +43,7 @@
         android:id="@+id/tvStart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="00:00"
+        android:text="@string/start_time"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/seekBar" />
 
@@ -51,7 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="370dp"
-        android:text="00:00"
+        android:text="@string/start_time"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/seekBar" />
 
@@ -60,7 +61,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:text="Ten Bai Hat"
+        android:text="@string/ten_bai_hat"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
