--- a/app/src/at-hauha/res/layout/fragment_music.xml
+++ b/app/src/at-hauha/res/layout/fragment_music.xml
@@ -95,5 +95,14 @@
         android:src="@drawable/ic_skip_previous_pink_400_24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+    <ImageView
+        android:id="@+id/imgShuffle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/shuffle_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imgPlay"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
