--- a/app/src/at-nguyenha/res/layout/item_music.xml
+++ b/app/src/at-nguyenha/res/layout/item_music.xml
@@ -69,6 +69,15 @@
 
         </LinearLayout>
 
+        <ImageView
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/ic_3dot_vertical"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
